fixed spacing

--- a/src/app/pricing/pricing.module.scss
+++ b/src/app/pricing/pricing.module.scss
@@ -800,6 +800,7 @@
 // New Row-Based Inclusions Section
 .inclusionsSection {
   padding-top: tokens.$spacing-xxl;
+  padding-bottom: tokens.$spacing-lg;
   position: relative;
 
   @include breakpoint-down("mobile") {
